# release

./: .drone.yml  BUILD  Cargo.toml  WORKSPACE
cargo/: BUILD  Cargo.toml  crates.bzl
cargo/remote/: aho-corasick-0.6.10.BUILD  dotenv-0.9.0.BUILD  regex-0.2.11.BUILD  regex-syntax-0.5.6.BUILD  ucd-util-0.1.5.BUILD  utf8-ranges-1.0.4.BUILD
src/: main.rs
